fix navigation bar layout issue on tablet and mobile

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -628,6 +628,10 @@ a:active {
         flex-direction: column;
     }
 
+    .logo {
+        margin-left: 0;
+    }
+
     nav div div {
         margin: 20px 0;
     }
